@@ -1,3 +1,8 @@
+2013-02-20  Alan Modra  <amodra@gmail.com>
+
+	* Makefile.am: Use $(ELF_DEPS) on a number of eelf*.c rules.
+	* Makefile.in: Regenerate.
+
 2013-02-19  Sandra Loosemore  <sandra@codesourcery.com>
 
 	PR ld/15146
